Updated misc according to ronnie

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,17 +22,16 @@ import heroBg from "../assets/mommente-hero-bg.jpeg";
     <div class="flex flex-col space-y-6 md:space-y-10">
       <div class="space-y-4">
         <p
-          class="text-xs md:text-sm uppercase tracking-[0.5em] font-bold text-brand-gold fade-in"
+          class="text-xs md:text-sm uppercase tracking-widest md:tracking-[0.5em] font-bold text-brand-gold fade-in"
           style="animation-delay: 0.1s"
         >
           A Modern E-Commerce House
         </p>
         <h1
-          class="text-6xl md:text-[8.5vw] font-sans font-black leading-[0.85] tracking-tighter uppercase fade-in"
+          class="text-5xl md:text-[8.5vw] font-sans font-black leading-[0.85] tracking-tighter uppercase fade-in"
           style="animation-delay: 0.3s"
         >
-          Elevated <br />
-          Essentials
+          Mommente<span class="text-brand-gold">.</span>
         </h1>
       </div>
 
@@ -49,7 +48,10 @@ import heroBg from "../assets/mommente-hero-bg.jpeg";
             lifestyle pieces.
           </p>
         </div>
-        <div class="flex items-center group cursor-pointer pb-2 mb-2">
+        <a
+          href="#brands"
+          class="flex items-center group cursor-pointer pb-2 mb-2 no-underline"
+        >
           <span class="text-[10px] uppercase tracking-[0.4em] font-black mr-8">
             The Collective
           </span>
@@ -69,7 +71,7 @@ import heroBg from "../assets/mommente-hero-bg.jpeg";
                 d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
             </svg>
           </div>
-        </div>
+        </a>
       </div>
     </div>
   </div>
